[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/player/Davion Walking2.png" type="Texture" id=1]
[ext_resource path="res://assets/player/Davion Walking3.png" type="Texture" id=2]
[ext_resource path="res://assets/player/Davion Walking1.png" type="Texture" id=3]
[ext_resource path="res://assets/player/Frame 2.png" type="Texture" id=4]
[ext_resource path="res://assets/player/Frame 1.png" type="Texture" id=5]
[ext_resource path="res://HealthMana.tscn" type="PackedScene" id=6]
[ext_resource path="res://Player.gd" type="Script" id=7]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 5 ), ExtResource( 4 ) ],
"loop": true,
"name": "idle",
"speed": 3.0
}, {
"frames": [ ExtResource( 3 ), ExtResource( 1 ), ExtResource( 2 ) ],
"loop": true,
"name": "walk",
"speed": 3.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 4, 40 )

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 7 )

[node name="Sprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "walk"
frame = 1
playing = true

[node name="Camera2D" type="Camera2D" parent="."]
offset = Vector2( 0, -40 )
current = true
zoom = Vector2( 0.4, 0.4 )
smoothing_enabled = true

[node name="Control" parent="Camera2D" instance=ExtResource( 6 )]
margin_left = -98.0
margin_top = -52.0
margin_right = -98.0
margin_bottom = -52.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2( 2, 0.35 )
shape = SubResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="Iframes" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[connection signal="health_updated" from="." to="Camera2D/Control" method="_on_Player_health_updated"]
